# FRAP-Toolbox

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  DiffusionModel_2.m  FRAPToolbox.prj  FRAP_FRET_Model.m  FRAP_Toolbox.prj  FRAP_Toolbox_MAC.prj  FRAPcurve.m  FRAPcurve_Diffusion.m  FRAPcurve_NCtransport.m  FRAPcurve_NCtransport2.m  FRAPcurve_Reaction.m  Figure_GUI.m  Figure_GUI_Diffusion.asv  Figure_GUI_Diffusion.m  Figure_GUI_FRAP_FRET.m  Figure_GUI_NCtransport.m  Figure_GUI_NCtransport2.m  Figure_GUI_Reaction.asv  Figure_GUI_Reaction.m  Figure_GUI_Reaction2.m  InitialConditions.m  InitialConditions_Diffusion.m  InitialConditions_FRAP_FRET.m  KangFRAP.m  Listoffiles.txt  MODERNIZATION.md  Main_GUI.asv  Main_GUI.m  Main_GUI.m~  NCtransportModel.m  NCtransportModel2.m  NormalizeFRAP_Diffusion.m  NormalizeFRAP_NCtransport2.m  NormalizeFRAP_Reaction.m  PhotoDecay.m  PhotoDecay_FRAP_FRET.m  PhotoDecay_Reaction.m  (+27 more)
.github/workflows/: python-tests.yml
Reaction2/: Venus-Atg5_Reaction2_FRAP_datasets.txt  Venus-Atg5_Reaction2_Fit_Parameters.txt
Test Data/: Venus_Cytoplasm_Diffusion_FRAP_datasets.txt  Venus_Cytoplasm_Diffusion_Fit_Parameters.txt  Venus_Cytoplasm_Diffusion_Postbleach_profiles.txt  Venus_Cytoplasm_Reaction2_FRAP_datasets.txt  Venus_Cytoplasm_Reaction2_Fit_Parameters.txt  Venus_Cytoplasm_Reaction_FRAP_datasets.txt  Venus_Cytoplasm_Reaction_Fit_Parameters.txt
deploy/: batch-worker.Dockerfile  cloud-run-api.Dockerfile
docs/: app-deployment.md  cloud-first-web-app.md  data-availability.md  developer-setup.md  guide-refit-comparison.md  matlab-to-python-port-testing.md  modernization-workstreams.md  remote-matlab-parity-probe.md  reporting-metric-sensitivity.md  roi-mask-format.md  roi-rasterization-survey.md  user-guide-parity-testing.md
docs/user-guide/: README.md
frap_toolbox_py/: README.md  __init__.py  app.py  app_launcher.py  cli.py  exports.py  initial_conditions.py  normalization.py  optimization.py  options.py  photodecay.py  roi.py  types.py
frap_toolbox_py/cloud/: __init__.py  backend.py  jobs.py  manifest.py  repository.py  storage.py  worker.py
frap_toolbox_py/data/: __init__.py  loading.py
frap_toolbox_py/gui/: __init__.py  main.py
frap_toolbox_py/models/: __init__.py  diffusion.py  reaction.py
frap_toolbox_py/tests/: test_app.py  test_cli_exports.py  test_cloud_backend.py  test_cloud_manifest.py  test_cloud_storage_jobs.py  test_cloud_worker.py  test_diffusion.py  test_diffusion_integration.py  test_exports.py  test_normalization.py  test_reaction.py  test_roi_masks.py  test_user_guide_parity.py
legacy/matlab/: FRAPcurve_Diffusion.m  FRAPcurve_FRAP_FRET.m  Figure_GUI_Diffusion.m  Main_GUI.m  NormalizeFRAP_Diffusion.m  NormalizeFRAP_FRAP_FRET.m  PhotoDecay_FRAP_FRET.m  README.md  ROIinitialization_Diffusion.m  ROIinitialization_FRAP_FRET.m  ROIinitialization_Reaction.m  ReactionModel1.m  ReactionModel2.m  bfGetReader.m  legacy-website-content.md  loadData_Diffusion.m  loadData_Reaction.m
sample-data/: README.md
scripts/: check_markdown_links.py  matlab_parity_probe.m  restore_test_data.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  styles.css
